--- a/cplusplus/frechet/frechet/frechet.vcxproj
+++ b/cplusplus/frechet/frechet/frechet.vcxproj
@@ -107,7 +107,8 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>D:\CGAL-4.6\auxiliary\gmp\lib;D:\boost_1_58_0\lib64-msvc-12.0;D:\CGAL-4.6\build\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>CGAL-vc120-mt-gd-4.6.lib;libgmp-10.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CGAL-vc120-mt-gd-4.6.lib;libgmp-10.lib;libmpfr-4.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/VERBOSE %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
