redo of Edge with double instead of Gmpq, finished grid allocation, began work on calculation functions

--- a/cplusplus/frechet/frechet/frechet.vcxproj
+++ b/cplusplus/frechet/frechet/frechet.vcxproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Edge.h" />
+    <ClInclude Include="frechet_types.h" />
     <ClInclude Include="FreeSpace.h" />
     <ClInclude Include="FsGridSquare.h" />
     <ClInclude Include="resource.h" />
