--- a/cplusplus/frechet/frechet/frechet.vcxproj
+++ b/cplusplus/frechet/frechet/frechet.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="frechet_types.h" />
     <ClInclude Include="FreeSpace.h" />
     <ClInclude Include="FsGridSquare.h" />
+    <ClInclude Include="PathTree.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -160,6 +161,7 @@
     <ClCompile Include="FreeSpace.cpp" />
     <ClCompile Include="FsGridSquare.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PathTree.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
