--- a/cplusplus/frechet/frechet/frechet.vcxproj.filters
+++ b/cplusplus/frechet/frechet/frechet.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="frechet_types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PathTree.h">
+      <Filter>Frechet\Public</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +66,9 @@
       <Filter>Frechet\Private</Filter>
     </ClCompile>
     <ClCompile Include="Edge.cpp">
+      <Filter>Frechet\Private</Filter>
+    </ClCompile>
+    <ClCompile Include="PathTree.cpp">
       <Filter>Frechet\Private</Filter>
     </ClCompile>
   </ItemGroup>
